--- a/genai/mcp/weather/pyproject.toml
+++ b/genai/mcp/weather/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "mcp-client"
+name = "weather"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "anthropic[vertex]>=0.52.0",
-    "mcp>=1.9.1",
+    "httpx>=0.28.1",
+    "mcp[cli]>=1.9.1",
 ]
